# utk-v2-dev

./: .gitmodules  CMakeLists.txt  TODO.md  UTKConfig.cmake  mkdocs.yml  setup.py
.github/workflows/: continuous.yml
cmake/: cli11.cmake  pybind11.cmake  spdlog.cmake  suitesparse.cmake
cmake/utk/: Metrics.cmake  Samplers.cmake
doc/: index.md  license.md
doc/libraries/: CppUtk.md  PyUTK.md
doc/samplers/: AAPatterns.md  ART.md  CMJ.md  DartThrowing.md  FastPoisson.md  Fattal.md  Faure.md  ForcedRandom.md  Halton.md  Hammersley.md  HexagonalGrid.md  Korobov.md  Kronecker.md  LDBN.md  LLoyd.md  NRooks.md  Niederreiter.md  PMJ.md  Penrose.md  ProjectiveBlueNoise.md  Rank1.md  RegularGrid.md  SinglePeak.md  Sobol.md  Step.md  Stratified.md  VanDerCorput.md  Whitenoise.md
examples/: CMakeLists.txt  Readme.md  all.cpp
examples/SamplersEval/: CMakeLists.txt  Config.hpp  Eval.hpp  evals.cpp
examples/SamplersPointsets/: plot.py  sample.sh
include/pyutk/: utils.hpp
include/utk/metrics/: BoundariesStarDiscrepancy.hpp  CenteredL2.hpp  Diaphony.hpp  GeneralizedL2.hpp  IntegrationTest.hpp  L2.hpp  MinDist.hpp  PCF.hpp  RadialSpectrum.hpp  Spectrum.hpp  SymmetricL2.hpp  UnanchoredL2.hpp
include/utk/metrics/Integrands/: BlinnPhong.hpp  GaussianIntegrands.hpp  HeavisideIntegrands.hpp
include/utk/samplers/: SamplerAAPatterns.hpp  SamplerART.hpp  SamplerBoundedBNOT.hpp  SamplerCMJ.hpp  SamplerDartThrowing.hpp  SamplerFastPoisson.hpp  SamplerFattal.hpp  SamplerFaure.hpp  SamplerForcedRandom.hpp  SamplerHalton.hpp  SamplerHammersley.hpp  SamplerHexagonalGrid.hpp  SamplerKorobov.hpp  SamplerKronecker.hpp  SamplerLDBN.hpp  SamplerLloyd.hpp  SamplerLutLDBN.hpp  SamplerNRooks.hpp  SamplerNiederreiter.hpp  SamplerPMJ.hpp  SamplerPenrose.hpp  SamplerPeriodicBNOT.hpp  SamplerProjectiveBlueNoise.hpp  SamplerR1.hpp  SamplerRegularGrid.hpp  SamplerSinglePeak.hpp  SamplerSobol.hpp  SamplerStep.hpp  SamplerStratified.hpp  SamplerVanDerCorput.hpp  SamplerWhitenoise.hpp
include/utk/scrambling/: CranleyPatterson.hpp  DigitalShift.hpp  MicroJittering.hpp  Owen.hpp  OwenTreeScrambling.hpp
include/utk/utils/: FastPRNG.hpp  MetricsArgumentParser.hpp  Pointset.hpp  PointsetIO.hpp  RadicalInversion.hpp  SamplerArgumentParser.hpp  utk_types.hpp
python/: CMakeLists.txt  pyUTK.cpp  setup.py
src/: CMakeLists.txt
src/logging/: log.hpp
src/metrics/: BoundariesStar.cpp  CMakeLists.txt  CenteredL2.cpp  Diaphony.cpp  GL2.cpp  GaussianIntegrationTest.cpp  HeavisideIntegrationTest.cpp  L2.cpp  MinDist.cpp  PCF.cpp  RadialSpectrum.cpp  Spectrum.cpp  SymmetricL2.cpp  UnanchoredL2.cpp
src/metrics/Integration/: BlinnPhongIntegrationTest.cpp  BuildBlinnPhongIntegrandDatabase.cpp  BuildGaussianIntegrandDatabase.cpp  BuildHeavisideIntegrandDatabase.cpp
src/metrics/exe/: BoundariesStar.cpp  BuildGaussianIntegrandDatabase.cpp  BuildHeavisideIntegrandDatabase.cpp  CenteredL2.cpp  Diaphony.cpp  GL2.cpp  GaussianIntegrationTest.cpp  HeavisideIntegrationTest.cpp  IntegrationTest.cpp  L2.cpp  PCF.cpp  Parser.hpp  RadialSpectrum.cpp  Spectrum.cpp  SymmetricL2.cpp  UnanchoredL2.cpp
src/metrics/python/: BaseMetrics.cpp  Metrics.cpp
src/metrics/src/: BoundariesStarDiscrepancy.hpp  CenteredL2.hpp  Diaphony.hpp  GeneralizedL2.hpp  IntegrationTest.hpp  L2.hpp  PCF.hpp  RadialSpectrum.hpp  Spectrum.hpp  SymmetricL2.hpp  UnanchoredL2.hpp
src/metrics/src/Integrands/: GaussianIntegrands.hpp  HeavisideIntegrands.hpp
src/pointsets/: Pointset.hpp  PointsetIO.hpp
src/pyutk/: pyUTK.cpp
src/samplers/: AAPatterns.cpp  ART.cpp  BoundedBNOT.cpp  CMJ.cpp  CMakeLists.txt  DartThrowing.cpp  FastPoisson.cpp  Fattal.cpp  Faure.cpp  ForcedRandom.cpp  Halton.cpp  Hammersley.cpp  HexagonalGrid.cpp  Korobov.cpp  Kronecker.cpp  LDBN.cpp  Lloyd.cpp  LutLDBN.cpp  NRooks.cpp  Niederreiter.cpp  PMJ.cpp  Penrose.cpp  PeriodicBNOT.cpp  ProjectiveBlueNoise.cpp  Rank1.cpp  RegularGrid.cpp  SinglePeak.cpp  Sobol.cpp  Step.cpp  Stratified.cpp  VanDerCorput.cpp  Whitenoise.cpp
src/samplers/exe/: AAPatterns.cpp  ART.cpp  CMJ.cpp  DartThrowing.cpp  FastPoisson.cpp  Fattal.cpp  Faure.cpp  ForcedRandom.cpp  Halton.cpp  Hammersley.cpp  HexagonalGrid.cpp  Korobov.cpp  Kronecker.cpp  LDBN.cpp  Lloyd.cpp  LutLDBN.cpp  NRooks.cpp  Niederreiter.cpp  PMJ.cpp  Parser.hpp  Penrose.cpp  ProjectiveBlueNoise.cpp  Rank1.cpp  RegularGrid.cpp  SinglePeak.cpp  Sobol.cpp  Step.cpp  Stratified.cpp  VanDerCorput.cpp  Whitenoise.cpp
src/samplers/misc/: CMakeLists.txt  Nebraska.cpp  SamplerNebraska.hpp
src/samplers/python/: BaseSamplers.cpp  ExternalSamplers.cpp  Samplers.cpp  Scrambling.cpp
src/samplers/scrambling/: CranleyPatterson.hpp  DigitalShift.hpp  MicroJittering.hpp  Owen.hpp  OwenTreeScrambling.hpp
src/samplers/src/: SamplerAAPatterns.hpp  SamplerART.hpp  SamplerCMJ.hpp  SamplerDartThrowing.hpp  SamplerFastPoisson.hpp  SamplerFattal.hpp  SamplerFaure.hpp  SamplerForcedRandom.hpp  SamplerHalton.hpp  SamplerHammersley.hpp  SamplerHexagonalGrid.hpp  SamplerKorobov.hpp  SamplerKronecker.hpp  SamplerLDBN.hpp  SamplerLloyd.hpp  SamplerLutLDBN.hpp  SamplerNRooks.hpp  SamplerNiederreiter.hpp  SamplerPMJ.hpp  SamplerPenrose.hpp  SamplerProjectiveBlueNoise.hpp  SamplerR1.hpp  SamplerRegularGrid.hpp  SamplerSinglePeak.hpp  SamplerSobol.hpp  SamplerStep.hpp  SamplerStratified.hpp  SamplerVanDerCorput.hpp  SamplerWhitenoise.hpp
src/samplers/src/Fattal/pdist_code/: main.hh
src/samplers/src/ForcedRandom/src/ForcedRandomSampling/: main.hpp
src/samplers/src/Step/: common.hh
src/samplers/utils/: FastPRNG.hpp  RadicalInversion.hpp
